--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,15 @@
 
 body {
 	height: 600vh;
+	font-size: 8px;
 	font-family: 'Noto Sans KR', sans-serif;
 	text-transform: uppercase;
 	background-color: #f1f1f1;
 	overflow-x: hidden;
+}
+
+.highlight-red {
+	color: #e61618;
 }
 
 nav {
@@ -32,6 +37,11 @@ nav a {
 	color: #f1f1f1;
 	text-decoration: none;
 	margin-inline-start: 0.5em;
+}
+
+
+.left-content, .right-content {
+	font-size: 0.7rem;
 }
 
 section {
@@ -82,29 +92,35 @@ canvas {
 .hero-title span:nth-child(1) {
 	font-weight: 800;
 }
+
 .hero-title span:nth-child(2) {
 	font-weight: 200;
 }
+
 .hero-title span:nth-child(3) {
 	font-weight: 400;
 	color: transparent;
 	-webkit-text-stroke: 1px black;
-	font-style: italic;
 }
+
 .hero-title span:nth-child(4) {
 	font-weight: 600;
-	font-style: italic;
+	color: #e61618;
 }
+
 .hero-title span:nth-child(5) {
 	font-weight: 100;
 }
+
 .hero-title span:nth-child(6) {
 	font-weight: 700;
 	color: transparent;
 	-webkit-text-stroke: 1px black;
 }
+
 .hero-title span:nth-child(7) {
 	font-weight: 500;
+	color: #e61618;
 }
 
 .hero-content {
@@ -167,7 +183,7 @@ body.loading .loader {
 	padding-inline: 2em;
 }
 
-.top > div:not(:last-child) {
+.top>div:not(:last-child) {
 	text-align: center;
 }
 
@@ -203,13 +219,13 @@ body.loading .loader {
 	padding-block-end: 4em;
 }
 
-section > .title {
+section>.title {
 	color: rgb(255, 255, 255);
 	text-align: center;
 	padding: 4em 2em;
 }
 
-.final > .title {
+.final>.title {
 	padding-block-end: 0;
 }
 
@@ -276,7 +292,7 @@ footer {
 	margin-bottom: 2em;
 }
 
-footer > div:not(.socials) {
+footer>div:not(.socials) {
 	font-size: 5rem;
 	font-weight: 800;
 	color: transparent;
@@ -325,15 +341,15 @@ footer > div:not(.socials) {
 	display: flex;
 }
 
-.first-line > div {
+.first-line>div {
 	animation: marquee 20s infinite reverse;
 }
 
-.second-line > div {
+.second-line>div {
 	animation: marquee 25s infinite;
 }
 
-.third-line > div {
+.third-line>div {
 	animation: marquee 25s infinite reverse;
 }
 
@@ -341,6 +357,7 @@ footer > div:not(.socials) {
 	from {
 		translate: 0% 0;
 	}
+
 	to {
 		translate: -100% 0;
 	}
@@ -353,7 +370,7 @@ footer > div:not(.socials) {
 }
 
 @media (width > 926px) {
-	footer > div:not(.socials) {
+	footer>div:not(.socials) {
 		margin-inline: auto;
 		width: 100%;
 		max-width: 1600px;
@@ -362,7 +379,7 @@ footer > div:not(.socials) {
 }
 
 @media (width > 1486px) {
-	footer > div:not(.socials) {
+	footer>div:not(.socials) {
 		font-size: 12rem;
 	}
 }
@@ -399,7 +416,7 @@ footer > div:not(.socials) {
 		margin-bottom: 15em;
 	}
 
-	.hero-content > div {
+	.hero-content>div {
 		width: 40%;
 	}
 
@@ -417,7 +434,7 @@ footer > div:not(.socials) {
 	}
 
 	.cards,
-	.roadmap > .title {
+	.roadmap>.title {
 		width: 100%;
 		max-width: 1200px;
 		margin-inline: auto;
@@ -440,6 +457,7 @@ footer > div:not(.socials) {
 	.left {
 		translate: 0 -50%;
 	}
+
 	.right {
 		translate: 0 50%;
 	}
@@ -448,13 +466,13 @@ footer > div:not(.socials) {
 		text-align: right;
 	}
 
-	.page > .right,
-	.page > .left {
+	.page>.right,
+	.page>.left {
 		width: 40%;
 	}
 
-	.top > div:last-child,
-	.about > div:last-child {
+	.top>div:last-child,
+	.about>div:last-child {
 		margin-top: 2em;
 		flex-direction: row;
 		justify-content: center;
@@ -469,8 +487,8 @@ footer > div:not(.socials) {
 		font-size: 3.5rem;
 	}
 
-	.top > div:last-child div,
-	.about > div:last-child div {
+	.top>div:last-child div,
+	.about>div:last-child div {
 		width: 40%;
 	}
 
@@ -486,7 +504,7 @@ footer > div:not(.socials) {
 		width: 450px;
 	}
 
-	section > .title {
+	section>.title {
 		padding-block: 5em;
 	}
 
