--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,6 @@
 	box-sizing: border-box;
 }
 
-html, body {
-    overflow-x: hidden;
-}
-
 body {
 	height: 600vh;
 	font-size: 8px;
@@ -66,8 +62,8 @@ canvas {
 	left: 50%;
 	bottom: 0;
 	transform: translate(-50%, 0);
-	/* width: 100%; */
-	height: 70dvh;
+	width: 100vw;
+	height: 100vh;
 	z-index: -1;
 }
 
@@ -393,10 +389,6 @@ footer>div:not(.socials) {
 		box-sizing: border-box;
 	}
 	
-	html, body {
-		overflow-x: hidden;
-	}
-	
 }
 @media (orientation: landscape) {
 	.text-spin {
@@ -410,10 +402,6 @@ footer>div:not(.socials) {
 
 	.btn {
 		margin: 0;
-	}
-
-	canvas {
-		height: 100dvh;
 	}
 
 	.hero {
