--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	height: 600vh;
+	height: 500vh;
 	font-size: 8px;
 	font-family: 'Noto Sans KR', sans-serif;
 	text-transform: uppercase;
@@ -63,16 +63,16 @@ section {
 	font-weight: 400;
 	font-size: 0.875 rem;
 }
-
 canvas {
+	background-color: green;
 	position: fixed;
-	left: 50%;
-	bottom: 0;
-	transform: translate(-50%, 0);
-	/* width: 100%; */
-	height: 70dvh;
-	z-index: -1;
+	left: 0;                      /* Align to the left edge of the viewport */
+	top: 0;                       /* Align to the top of the viewport */
+	width: 100vw;                 /* Make sure canvas takes full width of the viewport */
+	height: 100vh;                /* Make sure canvas takes full height of the viewport */
+	z-index: -1;                  /* Keep canvas in the background */
 }
+
 
 .hero {
 	display: flex;
@@ -404,10 +404,6 @@ footer > div:not(.socials) {
 
 	.btn {
 		margin: 0;
-	}
-
-	canvas {
-		height: 100dvh;
 	}
 
 	.hero {
