--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,16 @@
 	box-sizing: border-box;
 }
 
+html,body {
+	overflow-x: hidden;
+}
+
 body {
 	height: 500vh;
 	font-size: 8px;
 	font-family: 'Noto Sans KR', sans-serif;
 	text-transform: uppercase;
 	background-color: #f1f1f1;
-	overflow-x: hidden;
 }
 
 .highlight-red {
