draft 4 completed with social media handle

--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,58 @@ body > div:nth-child(7) > section > div.left > div:nth-child(2) {
 	text-transform: none;
 }
 
+.social-handle {
+    position: fixed; /* Fix it to the screen */
+    bottom: 20px; /* Distance from the bottom of the page */
+    right: 20px; /* Distance from the right of the page */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 4px;
+    z-index: 10; /* Ensure it's on top of other content */
+}
+
+.social-handle a {
+    display: inline-block;
+}
+
+.social-handle i {
+    font-size: 15px;
+    color: #333; /* Default color for icons */
+    border: 0.5px solid #000;
+    border-radius: 50%;
+    padding: 4px;
+    transition: all 0.3s ease;
+}
+
+.social-handle i:hover {
+    color: #ff2759; /* Hover color */
+    border-color: #ff2759; /* Hover border color */
+}
+
+
+/* Specific color for each icon */
+.fa-facebook {
+    color: #3b5998 !important;  /* Facebook blue */
+}
+
+.fa-twitter {
+    color: #1da1f2 !important;  /* Twitter blue */
+}
+
+.fa-instagram {
+    color: #e4405f !important;  /* Instagram pinkish red */
+}
+
+.fa-youtube {
+    color: #ff0000 !important;  /* YouTube red */
+}
+
+.fa-linkedin {
+    color: #0077b5 !important;  /* LinkedIn blue */
+}
+
+
 .loader {
 	display: none;
 }
@@ -443,6 +495,9 @@ footer > div:not(.socials) {
 		gap:40px;
 	}
 
+	.page .left .fat:is(:first-child) {
+		margin-top: 1em;
+	}
 
 	
 }@media (orientation: landscape) {
