--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,11 @@
 	box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
 	margin: 0;
 	padding: 0;
-    overflow-x: hidden;
+	overflow-x: hidden;
 	height: 600vh;
 }
 
@@ -24,31 +25,36 @@ body {
 
 
 #canvas {
-	width: 100vw; /* Cover the entire viewport width */
-	height: 100vh; /* Cover the entire viewport height */
+	width: 100vw;
+	/* Cover the entire viewport width */
+	height: 100vh;
+	/* Cover the entire viewport height */
 	display: block;
-	position: fixed; /* To prevent it from moving within a flow layout */
+	position: fixed;
+	/* To prevent it from moving within a flow layout */
 	top: 0;
 	left: 0;
 	z-index: 5;
-  }
+}
 
 .homepage {
-  background-color: beige;
-  padding: 40px;
-  position: relative;
-  height: 200vh; /* Full viewport height */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 300vh; /* Position below the canvas */
+	background-color: beige;
+	padding: 40px;
+	position: relative;
+	height: 200vh;
+	/* Full viewport height */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 300vh;
+	/* Position below the canvas */
 }
 
 .highlight-red {
 	color: #e61618;
 }
 
-  
+
 nav {
 	padding: 1em;
 	display: flex;
@@ -68,14 +74,16 @@ nav a {
 	text-decoration: none;
 	margin-inline-start: 0.5em;
 }
-.left-content, .right-content {
+
+.left-content,
+.right-content {
 	font-size: 1rem;
 	text-transform: none;
 
 }
 
 section {
-	min-height:100dvh;
+	min-height: 100dvh;
 
 }
 
@@ -93,7 +101,7 @@ section {
 .thin-jp {
 	font-weight: 400;
 	font-size: 0.875 rem;
-}	
+}
 
 
 .hero {
@@ -120,27 +128,33 @@ section {
 .hero-title span:nth-child(1) {
 	font-weight: 800;
 }
+
 .hero-title span:nth-child(2) {
 	font-weight: 200;
 }
+
 .hero-title span:nth-child(3) {
 	font-weight: 400;
 	color: transparent;
 	-webkit-text-stroke: 1px black;
 	/*font-style: italic;*/
 }
+
 .hero-title span:nth-child(4) {
 	font-weight: 600;
 	/*font-style: italic;*/
 }
+
 .hero-title span:nth-child(5) {
 	font-weight: 100;
 }
+
 .hero-title span:nth-child(6) {
 	font-weight: 700;
 	color: transparent;
 	-webkit-text-stroke: 1px black;
 }
+
 .hero-title span:nth-child(7) {
 	font-weight: 500;
 	color: #e61618;
@@ -160,7 +174,7 @@ section {
 }
 
 .bold-text {
-	font-weight: 800;
+	font-weight: 500;
 	font-size: 1.5rem;
 }
 
@@ -194,19 +208,19 @@ section {
 }
 
 
-body > div:nth-child(5) > section > div.right > div:nth-child(1) {
+body>div:nth-child(5)>section>div.right>div:nth-child(1) {
 	font-size: 1rem;
 	font-weight: 400;
 	text-transform: none;
 }
 
-body > div:nth-child(7) > section > div.left > div:nth-child(2) {
+body>div:nth-child(7)>section>div.left>div:nth-child(2) {
 	font-size: 1rem;
 	font-weight: 400;
 	text-transform: none;
 }
 
-body > div:nth-child(7) > section > div.right > div:nth-child(1) {
+body>div:nth-child(7)>section>div.right>div:nth-child(1) {
 	margin-top: 1em;
 	font-size: 1rem;
 	font-weight: 400;
@@ -217,56 +231,71 @@ body > div:nth-child(7) > section > div.right > div:nth-child(1) {
 
 
 .social-handle {
-    position: fixed; /* Fix it to the screen */
-    bottom: 20px; /* Distance from the bottom of the page */
-    right: 20px; /* Distance from the right of the page */
-    display: none; /* Hide initially */
-    justify-content: space-around;
-    align-items: center;
-    gap: 4px;
-    z-index: 10; /* Ensure it's on top of other content */
+	position: fixed;
+	/* Fix it to the screen */
+	bottom: 20px;
+	/* Distance from the bottom of the page */
+	right: 20px;
+	/* Distance from the right of the page */
+	display: none;
+	/* Hide initially */
+	justify-content: space-around;
+	align-items: center;
+	gap: 4px;
+	z-index: 10;
+	/* Ensure it's on top of other content */
 }
 
 .social-handle a {
-    display: inline-block;
+	display: inline-block;
 }
 
 .social-handle i {
-    font-size: 15px;
-    color: #333; /* Default color for icons */
-    border: 0.5px solid #000;
-    border-radius: 50%;
-    padding: 4px;
-    transition: all 0.3s ease;
+	font-size: 15px;
+	color: #333;
+	/* Default color for icons */
+	border: 0.5px solid #000;
+	border-radius: 50%;
+	padding: 4px;
+	transition: all 0.3s ease;
 }
 
 .social-handle i:hover {
-    color: #ff2759; /* Hover color */
-    border-color: #ff2759; /* Hover border color */
-	transform: scale(1.4); /* Increase the size by 20% */
-    z-index: 20; /* Ensure the hovered icon is on top */
+	color: #ff2759;
+	/* Hover color */
+	border-color: #ff2759;
+	/* Hover border color */
+	transform: scale(1.4);
+	/* Increase the size by 20% */
+	z-index: 20;
+	/* Ensure the hovered icon is on top */
 }
 
 
 /* Specific color for each icon */
 .fa-facebook {
-    color: #3b5998 !important;  /* Facebook blue */
+	color: #3b5998 !important;
+	/* Facebook blue */
 }
 
 .fa-twitter {
-    color: #1da1f2 !important;  /* Twitter blue */
+	color: #1da1f2 !important;
+	/* Twitter blue */
 }
 
 .fa-instagram {
-    color: #e4405f !important;  /* Instagram pinkish red */
+	color: #e4405f !important;
+	/* Instagram pinkish red */
 }
 
 .fa-youtube {
-    color: #ff0000 !important;  /* YouTube red */
+	color: #ff0000 !important;
+	/* YouTube red */
 }
 
 .fa-linkedin {
-    color: #0077b5 !important;  /* LinkedIn blue */
+	color: #0077b5 !important;
+	/* LinkedIn blue */
 }
 
 
@@ -297,7 +326,7 @@ body.loading .loader {
 	padding-inline: 2em;
 }
 
-.top > div:not(:last-child) {
+.top>div:not(:last-child) {
 	text-align: center;
 }
 
@@ -333,13 +362,13 @@ body.loading .loader {
 	padding-block-end: 4em;
 }
 
-section > .title {
+section>.title {
 	color: rgb(255, 255, 255);
 	text-align: center;
 	padding: 4em 2em;
 }
 
-.final > .title {
+.final>.title {
 	padding-block-end: 0;
 }
 
@@ -407,7 +436,7 @@ footer {
 	margin-bottom: 2em;
 }
 
-footer > div:not(.socials) {
+footer>div:not(.socials) {
 	font-size: 5rem;
 	font-weight: 800;
 	color: transparent;
@@ -455,15 +484,15 @@ footer > div:not(.socials) {
 	display: flex;
 }
 
-.first-line > div {
+.first-line>div {
 	animation: marquee 20s infinite reverse;
 }
 
-.second-line > div {
+.second-line>div {
 	animation: marquee 25s infinite;
 }
 
-.third-line > div {
+.third-line>div {
 	animation: marquee 25s infinite reverse;
 }
 
@@ -471,6 +500,7 @@ footer > div:not(.socials) {
 	from {
 		translate: 0% 0;
 	}
+
 	to {
 		translate: -100% 0;
 	}
@@ -483,7 +513,7 @@ footer > div:not(.socials) {
 }
 
 @media (width > 926px) {
-	footer > div:not(.socials) {
+	footer>div:not(.socials) {
 		margin-inline: auto;
 		width: 100%;
 		max-width: 1600px;
@@ -492,7 +522,7 @@ footer > div:not(.socials) {
 }
 
 @media (width > 1486px) {
-	footer > div:not(.socials) {
+	footer>div:not(.socials) {
 		font-size: 5rem;
 	}
 }
@@ -504,16 +534,22 @@ footer > div:not(.socials) {
 		box-sizing: border-box;
 	}
 
-	.hero-content{
-		gap:40px;
+	.hero-content {
+		gap: 40px;
 	}
 
 	.page .left .fat:is(:first-child) {
 		margin-top: 1em;
 	}
 
-	
-}@media (orientation: landscape) {
+	.hero-title {
+		font-size: 6rem;
+	}
+
+}
+
+
+@media (orientation: landscape) {
 	.text-spin {
 		left: -100%;
 		font-size: 8rem;
@@ -541,7 +577,7 @@ footer > div:not(.socials) {
 		margin-bottom: 15em;
 	}
 
-	.hero-content > div {
+	.hero-content>div {
 		width: 40%;
 	}
 
@@ -559,7 +595,7 @@ footer > div:not(.socials) {
 	}
 
 	.cards,
-	.roadmap > .title {
+	.roadmap>.title {
 		width: 100%;
 		max-width: 1200px;
 		margin-inline: auto;
@@ -582,6 +618,7 @@ footer > div:not(.socials) {
 	.left {
 		translate: 0 -50%;
 	}
+
 	.right {
 		translate: 0 50%;
 	}
@@ -590,13 +627,13 @@ footer > div:not(.socials) {
 		text-align: right;
 	}
 
-	.page > .right,
-	.page > .left {
+	.page>.right,
+	.page>.left {
 		width: 40%;
 	}
 
-	.top > div:last-child,
-	.about > div:last-child {
+	.top>div:last-child,
+	.about>div:last-child {
 		margin-top: 2em;
 		flex-direction: row;
 		justify-content: center;
@@ -611,8 +648,8 @@ footer > div:not(.socials) {
 		font-size: 3.5rem;
 	}
 
-	.top > div:last-child div,
-	.about > div:last-child div {
+	.top>div:last-child div,
+	.about>div:last-child div {
 		width: 40%;
 	}
 
@@ -628,7 +665,7 @@ footer > div:not(.socials) {
 		width: 450px;
 	}
 
-	section > .title {
+	section>.title {
 		padding-block: 5em;
 	}
 
