--- a/css/speed-test.css
+++ b/css/speed-test.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #f1f1f1, #c5ccd6);
+  background: #c5ccd6;
   font-size: 16px;
   font-family: 'Noto Sans KR', sans-serif;
   text-transform: uppercase;
@@ -20,7 +20,8 @@ body {
 
 .container {
   display: flex;
-  flex-direction: column; /* Stack children (input + results) */
+  flex-direction: column;
+  /* Stack children (input + results) */
   align-items: center;
   width: 100vw;
   min-height: 100vh;
@@ -34,37 +35,49 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh; /* Ensures centering */
+  min-height: 100vh;
+  /* Ensures centering */
   position: relative;
 }
 
 .input-container {
+  margin-top: 30%;
   display: flex;
-  flex-direction: column; /* Stack children vertically */
-  align-items: center; /* Center children horizontally */
+  flex-direction: column;
+  /* Stack children vertically */
+  align-items: center;
+  /* Center children horizontally */
   justify-content: center;
-  width: 40vw; /* 50% of screen width */
+  width: 40vw;
+  /* 50% of screen width */
   background: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  gap: 20px; /* Ensures vertical spacing */
+  gap: 20px;
+  /* Ensures vertical spacing */
   min-height: 35vh;
 }
 
 /* Iterations Row */
 .iterations-row {
   display: flex;
-  flex-direction: row; /* Place iterations input and start button in a row */
-  align-items: center; /* Align items vertically in the center */
-  justify-content: center; /* Center items horizontally */
-  gap: 20px; /* Space between iterations input and start button */
-  width: 100%; /* Take full width of parent */
+  flex-direction: row;
+  /* Place iterations input and start button in a row */
+  align-items: center;
+  /* Align items vertically in the center */
+  justify-content: center;
+  /* Center items horizontally */
+  gap: 20px;
+  /* Space between iterations input and start button */
+  width: 100%;
+  /* Take full width of parent */
 }
 
 /* Progress Bar */
 .progress-bar {
-  width: 100%; /* Full width of parent */
+  width: 100%;
+  /* Full width of parent */
   height: 20px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
@@ -81,33 +94,41 @@ body {
 
 /* Error Box */
 .error-box {
-  width: 100%; /* Full width of parent */
+  width: 100%;
+  /* Full width of parent */
   margin-top: 20px;
   padding: 15px;
   background: #f1f1f1;
   border: 1px solid black;
   border-radius: 5px;
-  color: black; /* Ensure text is visible */
+  color: black;
+  /* Ensure text is visible */
   font-size: 0.8rem;
   text-align: center;
 }
 
 /* Result Container */
 .result-container {
-  width: 100vw; /* 50% of screen width */
+  width: 100vw;
+  /* 50% of screen width */
   max-width: 800px;
   background: rgba(255, 255, 255, 0.9);
   padding: 20px;
   border-radius: 10px;
   font-size: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  min-height: 100px; /* Ensures it starts small */
+  min-height: 100px;
+  /* Ensures it starts small */
   height: auto;
   max-height: 100vh;
-  overflow-y: auto; /* Enables scrolling if content overflows */
-  display: none; /* Initially hidden */
-  position: absolute; /* Takes it out of the document flow */
-  top: 100%; /* Makes it appear right below input-container */
+  overflow-y: auto;
+  /* Enables scrolling if content overflows */
+  display: none;
+  /* Initially hidden */
+  position: absolute;
+  /* Takes it out of the document flow */
+  top: 100%;
+  /* Makes it appear right below input-container */
 }
 
 .result-container p {
@@ -121,12 +142,18 @@ body {
 }
 
 .header-text {
-  position: absolute; /* Allows precise positioning */
-  top: 10%; /* Places it 5% from the top of the viewport */
-  left: 50%; /* Moves the left edge to 50% of viewport */
-  transform: translateX(-50%); /* Centers it horizontally */
-  text-align: center; /* Ensures text inside is centered */
-  width: 80%; /* Optional: Makes sure it spans full width */
+  position: absolute;
+  /* Allows precise positioning */
+  top: 10%;
+  /* Places it 5% from the top of the viewport */
+  left: 50%;
+  /* Moves the left edge to 50% of viewport */
+  transform: translateX(-50%);
+  /* Centers it horizontally */
+  text-align: center;
+  /* Ensures text inside is centered */
+  width: 80%;
+  /* Optional: Makes sure it spans full width */
 }
 
 h1 {
@@ -140,7 +167,8 @@ h1 {
 
 }
 
-h2, h3 {
+h2,
+h3 {
   text-align: center;
   margin-bottom: 15px;
   font-size: 1rem;
@@ -158,7 +186,8 @@ label {
 
 input,
 button {
-  width: 100%; /* Full width of parent */
+  width: 100%;
+  /* Full width of parent */
   font-weight: 500;
   padding: 10px;
   border: none;
@@ -185,7 +214,6 @@ button {
 }
 
 button:hover {
-  background: rgba(230, 22, 24, 1);
   transform: scale(1.02);
 }
 
@@ -256,11 +284,14 @@ button:hover {
 }
 
 #copy-to-clipboard {
-  display: block; /* Change to block-level element */
-  margin: 10px auto; /* Center horizontally */
-  padding: 10px 20px; /* Make it look like a button */
+  display: block;
+  /* Change to block-level element */
+  margin: 10px auto;
+  /* Center horizontally */
+  padding: 10px 20px;
+  /* Make it look like a button */
   background: #e61618;
-  color: white; 
+  color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -274,24 +305,52 @@ button:hover {
   }
 
   .input-container {
-    width: 90vw; /* Adjust width for mobile */
+    width: 70vw;
+    /* Adjust width for mobile */
   }
 
   .result-container {
-    width: 90vw; /* Adjust width for mobile */
+    width: 90vw;
+    /* Adjust width for mobile */
   }
 
   .iterations-row {
-    flex-direction: column; /* Stack iterations input and start button vertically on mobile */
-    gap: 10px; /* Reduce gap for mobile */
+    flex-direction: column;
+    /* Stack iterations input and start button vertically on mobile */
+    gap: 10px;
+    /* Reduce gap for mobile */
   }
 
-  input,button {
+  input,
+  button {
     min-width: 25vw !important;
+      font-size: 0.7rem;
+
   }
 
   .input-container {
-    margin-top:25%;;
+    margin-top: 25%;
+    ;
+  }
+
+  h1 {
+    font-size: 1rem;
+  }
+
+  .header-text p {
+    font-size: 0.7rem;
+
+  }
+
+
+  h2,
+  h3 {
+
+    font-size: 0.7rem;
+  }
+
+  label {
+    font-size: 0.5rem;
   }
 
 }
