--- a/app/speedtest/speed-test.css
+++ b/app/speedtest/speed-test.css
@@ -9,7 +9,7 @@
     height: 100%;
     margin: 0;
     justify-content: center;
-    background: #c5ccd6;
+    background: #f1f1f1;
     font-size: 16px;
     font-family: 'Noto Sans KR', sans-serif;
     text-transform: uppercase;
@@ -49,10 +49,8 @@
     align-items: center;
     justify-content: center;
     width: 40vw;
-    background: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     gap: 20px;
     margin-top: 20px;
   }
@@ -69,7 +67,6 @@
   .progress-bar {
     width: 100%;
     height: 20px;
-    background: rgba(255, 255, 255, 0.2);
     border-radius: 10px;
     margin: 20px 0;
     overflow: hidden;
@@ -86,8 +83,6 @@
     width: 100%;
     margin-top: 20px;
     padding: 15px;
-    background: #f1f1f1;
-    border: 1px solid black;
     border-radius: 5px;
     color: black;
     font-size: 0.8rem;
@@ -119,23 +114,24 @@
   
   /* Speedometer Animation */
   .speedometer {
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
-    color: #00ff88;
+   /* color: #00ff88;*/
+    color: lightgray;
   }
   
   .speedometer-display {
     display: inline-block;
-    padding: 10px 20px;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+   /* padding: 10px 20px;*/
+    /*background: rgba(0, 0, 0, 0.8);*/
+   /* border-radius: 10px;*/
+   /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);*/
   }
   
   #speedometer-value {
-    font-size: 2.5rem;
+    font-size: 6.5rem;
     transition: all 0.3s ease;
   }
   
